--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '2'
+version: "2"
 services:
   db:
     build:
@@ -6,10 +6,9 @@ services:
     env_file:
       - ./db-server/.env
     volumes:
-      - 'db-data:/var/lib/postgresql/data'
+      - "db-data:/var/lib/postgresql/data"
     ports:
-      - '5437:5432'
-    restart: always
+      - "5437:5432"
 volumes:
   db-data:
     external:
