--- a/.env-example
+++ b/.env-example
@@ -1,7 +1,7 @@
 DB_DATABASE=cam
-DB_HOST=db
+DB_HOST=localhost
 DB_PASS=cam
-DB_PORT=5432
+DB_PORT=5437
 DB_USER=cam
 INTERNAL_PORT=4011
 LATEST_MONTH=2020-12
